--- a/roc_server/roc_server.vcxproj
+++ b/roc_server/roc_server.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="Elements\File.h" />
     <ClInclude Include="Lua\ArgReader.h" />
     <ClInclude Include="Lua\LuaArguments.h" />
+    <ClInclude Include="Lua\LuaDefinitions.Element.h" />
     <ClInclude Include="Lua\LuaDefinitions.Events.h" />
     <ClInclude Include="Lua\LuaDefinitions.File.h" />
     <ClInclude Include="Lua\LuaDefinitions.Network.h" />
@@ -107,6 +108,7 @@
     <ClInclude Include="Managers\SfmlManager.h" />
     <ClInclude Include="RocInc.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Utils\CustomData.h" />
     <ClInclude Include="Utils\Pool.h" />
     <ClInclude Include="Utils\Utils.h" />
   </ItemGroup>
@@ -125,6 +127,7 @@
     <ClCompile Include="Elements\File.cpp" />
     <ClCompile Include="Lua\ArgReader.cpp" />
     <ClCompile Include="Lua\LuaArguments.cpp" />
+    <ClCompile Include="Lua\LuaDefinitions.Element.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Events.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.File.cpp" />
     <ClCompile Include="Lua\LuaDefinitions.Network.cpp" />
@@ -143,6 +146,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\CustomData.cpp" />
     <ClCompile Include="Utils\Pool.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
   </ItemGroup>
