--- a/roc_server/roc_server.vcxproj.filters
+++ b/roc_server/roc_server.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="Elements\Element.cpp">
       <Filter>Elements</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\CustomData.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="Lua\LuaDefinitions.Element.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -138,6 +144,12 @@
     </ClInclude>
     <ClInclude Include="Elements\Element.h">
       <Filter>Elements</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\CustomData.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Lua\LuaDefinitions.Element.h">
+      <Filter>Lua</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
