--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="Managers\EventManager.h" />
     <ClInclude Include="Managers\NetworkManager.h" />
     <ClInclude Include="Managers\RenderManager\Quad.h" />
+    <ClInclude Include="Managers\RenderManager\Quad3D.h" />
     <ClInclude Include="Managers\RenderManager\RenderManager.h" />
     <ClInclude Include="Managers\SfmlManager.h" />
     <ClInclude Include="Managers\InheritanceManager.h" />
@@ -263,6 +264,7 @@
     <ClCompile Include="Managers\EventManager.cpp" />
     <ClCompile Include="Managers\NetworkManager.cpp" />
     <ClCompile Include="Managers\RenderManager\Quad.cpp" />
+    <ClCompile Include="Managers\RenderManager\Quad3D.cpp" />
     <ClCompile Include="Managers\RenderManager\RenderManager.cpp" />
     <ClCompile Include="Managers\SfmlManager.cpp" />
     <ClCompile Include="Managers\InheritanceManager.cpp" />
