--- a/roc_server/roc_server.vcxproj.filters
+++ b/roc_server/roc_server.vcxproj.filters
@@ -139,6 +139,9 @@
     <ClInclude Include="Lua\LuaDefinitions.Element.h">
       <Filter>Lua</Filter>
     </ClInclude>
+    <ClInclude Include="Lua\LuaFunction.hpp">
+      <Filter>Lua</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Core">
