--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -194,10 +194,14 @@
     <ClInclude Include="Managers\SoundManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils\CustomData.h" />
+    <ClInclude Include="Utils\EnumUtils.h" />
+    <ClInclude Include="Utils\LuaUtils.h" />
+    <ClInclude Include="Utils\MathUtils.h" />
+    <ClInclude Include="Utils\PathUtils.h" />
     <ClInclude Include="Utils\Pool.h" />
     <ClInclude Include="Utils\SystemTick.h" />
     <ClInclude Include="Utils\TreeNode.h" />
-    <ClInclude Include="Utils\Utils.h" />
+    <ClInclude Include="Utils\zlibUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\vendor\luautf8\lutf8lib.c">
@@ -283,18 +287,22 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Utils\CustomData.cpp" />
+    <ClCompile Include="Utils\EnumUtils.cpp" />
     <ClCompile Include="Utils\GlobalConstants.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\LuaUtils.cpp" />
+    <ClCompile Include="Utils\MathUtils.cpp" />
+    <ClCompile Include="Utils\PathUtils.cpp" />
     <ClCompile Include="Utils\Pool.cpp" />
     <ClCompile Include="Utils\SystemTick.cpp" />
     <ClCompile Include="Utils\TreeNode.cpp" />
-    <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="..\vendor\pugixml\pugixml.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">stdafx.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\zlibUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="main_resource.rc" />
