Minor update Client: - Renamed 'setRenderTarget' to 'setActiveTarget' - Renamed Shader class methods for default uniforms - Minor fixes

--- a/run_on_coal/run_on_coal.vcxproj.filters
+++ b/run_on_coal/run_on_coal.vcxproj.filters
@@ -472,7 +472,9 @@
     <ClInclude Include="Elements\Shader\ShaderUniform.h">
       <Filter>Elements\Shader</Filter>
     </ClInclude>
-    <ClInclude Include="Utils\GLUtils.hpp" />
+    <ClInclude Include="Utils\GLUtils.hpp">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Managers">
