--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -184,7 +184,7 @@
     <ClInclude Include="Lua\LuaArguments.h" />
     <ClInclude Include="Managers\EventManager.h" />
     <ClInclude Include="Managers\NetworkManager.h" />
-    <ClInclude Include="Managers\RenderManager\Quad.h" />
+    <ClInclude Include="Managers\RenderManager\Quad2D.h" />
     <ClInclude Include="Managers\RenderManager\Quad3D.h" />
     <ClInclude Include="Managers\RenderManager\RenderManager.h" />
     <ClInclude Include="Managers\SfmlManager.h" />
@@ -279,7 +279,7 @@
     <ClCompile Include="Lua\LuaArguments.cpp" />
     <ClCompile Include="Managers\EventManager.cpp" />
     <ClCompile Include="Managers\NetworkManager.cpp" />
-    <ClCompile Include="Managers\RenderManager\Quad.cpp" />
+    <ClCompile Include="Managers\RenderManager\Quad2D.cpp" />
     <ClCompile Include="Managers\RenderManager\Quad3D.cpp" />
     <ClCompile Include="Managers\RenderManager\RenderManager.cpp" />
     <ClCompile Include="Managers\SfmlManager.cpp" />
